--- a/Develop/stylesheet.css
+++ b/Develop/stylesheet.css
@@ -1,4 +1,10 @@
-.products {
+* { 
+    box-sizing: border-box; 
+    margin: 0; 
+    border: 0; 
+    padding: 0; 
+  } 
+h2 {
     border-style: solid;
     border-width: 1px;
     border-radius: 50px;
@@ -6,21 +12,24 @@
     flex: 0 0 300px;
     box-shadow: 10px 10px 5px #aaaaaa;
     margin: 20px;
-
-    /*width: 300px;
-    border: 15px dotted blue;
-    padding: 25px;
-    flex: 3;
-    flex-wrap: nowrap; */
-}
-
-h2 {
     text-align: center;
+    box-sizing: border-box;
+    position: relative;
+    font-style: bold;
 }
 h1,
 h3,
 h4 {
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 50px;
+    padding: 10px;
+    flex: 0 0 300px;
+    box-shadow: 10px 10px 5px #aaaaaa;
+    margin: 20px;
     text-align: center;
+    font-size: larger;
+    font-style: italic;
 }
 
 header {
@@ -37,7 +46,7 @@ nav {
     background-color: rgb(15, 16, 94);
     border: 10px;
     text-align: center;
-    margin: 5px;
+    margin: 3px;
 }
 a {
     font-family: 'Times New Roman', Times, serif;
@@ -52,6 +61,13 @@ main {
 nav a {
     color: whitesmoke;
     padding: 0px 14px;
-    text-decoration: none;
     text-align: center;
   }
+p {
+    text-justify: auto;
+}
+
+li {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: medium;
+}
