--- a/Develop/stylesheet.css
+++ b/Develop/stylesheet.css
@@ -34,7 +34,8 @@ h3 {
     font-size: larger;
     font-style: italic;
 }
-h4 {
+h4,
+h5 {
     border-style: solid;
     border-width: 1px;
     border-radius: 50px;
@@ -45,6 +46,8 @@ h4 {
     text-align: center;
     font-size: larger;
     font-style: italic;
+    flex-direction: column;
+    box-sizing: content-box;
 }
 
 header {
@@ -94,3 +97,14 @@ div {
     margin-right: auto;
     width: 95%;
   }
+
+  @media screen and (max-width: 768px) {
+    header {
+      flex-direction: column;
+    }
+  
+    main {
+      max-width: 1200px;
+      background-color: whitesmoke;
+    }
+  }  
